--- a/.gitignore
+++ b/.gitignore
@@ -250,6 +250,5 @@ $RECYCLE.BIN/
 
 # End of https://www.toptal.com/developers/gitignore/api/osx,windows,node,polymer,sublimetext,text
 
-/scss
-
-/Backup-css
+scss
+Backup-css
