--- a/.gitignore
+++ b/.gitignore
@@ -250,6 +250,6 @@ $RECYCLE.BIN/
 
 # End of https://www.toptal.com/developers/gitignore/api/osx,windows,node,polymer,sublimetext,text
 
-/scss
+*scss
 
-/Backup-css
+*Backup-css
