--- a/.gitignore
+++ b/.gitignore
@@ -248,8 +248,10 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+/scss
+
+/Backup-css
+
 # End of https://www.toptal.com/developers/gitignore/api/osx,windows,node,polymer,sublimetext,text
 
-*scss
 
-*Backup-css
