--- a/.gitignore
+++ b/.gitignore
@@ -248,9 +248,9 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-scss
+scss/
 
-Backup-css
+Backup-css/
 
 # End of https://www.toptal.com/developers/gitignore/api/osx,windows,node,polymer,sublimetext,text
 
