--- a/.gitignore
+++ b/.gitignore
@@ -80,7 +80,7 @@ $RECYCLE.BIN/
 *.lnk
 
 #Archivos/carpetas propios
-*scss
-*Backup-css
+scss
+Backup-css
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,windows,visualstudiocode
